# trading-bot

./: .dockerignore  .env.example  .gitignore  BTC-Futures-TradingBot-Design-V1.md  BTC-Futures-TradingBot-Design-V2.md  Dockerfile  PHASE2-SPEC.md  README.md  TradingBot-Design-V3.md  constraints.txt  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
.claude/: launch.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
doc/: 2a-service-plan.md  2b-ui-plan.md  2c-tradovate-venue-plan.md  2d-strategy-plan.md  deployment.md  implementation-plan.md  implementation-plan.toon  m2-plan.md  m3-plan.md  runbook.md  websocket-streaming-plan.md
docs/: ci.md  runbook.md
src/tradingbot/: app.py  (+14 more)
tests/: doubles.py  test_alpaca_datafeed.py  test_alpaca_stream.py  test_alpaca_venue.py  test_amvr_strategy.py  test_auth.py  test_bybit_venue.py  test_capabilities.py  test_ccxt_candlefeed.py  test_ccxt_stream.py  test_ccxt_venue.py  test_coinbase_aggregator.py  test_coinbase_datafeed.py  test_coinbase_feed.py  test_coinbase_stream.py  test_coinbase_venue.py  test_config.py  test_contract_resolution.py  test_contracts.py  test_datafeed.py  test_fake_venue.py  test_main.py  test_models.py  test_reconnect.py  test_router.py  test_runtime.py  test_strategies.py  test_strategy.py  test_stream_runtime.py  test_trade_models.py  test_tradovate_feed.py  test_tradovate_venue.py  test_webhook.py
ui/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+113 files in other folders)
