[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "0.1.0"
description = "Multi-bot trading console for internal operators"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
tradingbot = "tradingbot.admin:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
