[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingbot"
version = "0.1.0"
description = "Multi-bot trading console for internal operators"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.scripts]
tradingbot = "tradingbot.admin:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.bandit]
# Production security scan of the app only; test code is not deployed and its
# asserts (B101) are idiomatic. Findings block CI (no exit_zero) — suppress a
# specific false positive inline with `# nosec <ID>  # rationale`, never globally.
exclude_dirs = ["tests", "ui", ".venv"]

